--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angular-custom-modal": "^1.2.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
+    "https-proxy-agent": "^5.0.0",
     "jquery": "^3.3.1",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
