--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
     "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
+    "handlebars": "^4.7.6",
     "https-proxy-agent": "^5.0.0",
     "jquery": "^3.3.1",
+    "js-yaml": "^3.14.0",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
     "lodash": "^4.17.15",
     "lodash.mergewith": "^4.6.2",
+    "mixin-deep": "^2.0.1",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
     "set-value": "^3.0.2",
+    "tar": "^6.0.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
