--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "acorn": "^7.2.0",
     "angular-custom-modal": "^1.2.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
+    "fstream": "^1.0.12",
     "handlebars": "^4.7.6",
     "https-proxy-agent": "^5.0.0",
     "jquery": "^3.5.1",
@@ -32,11 +34,13 @@
     "jszip-utils": "^0.1.0",
     "lodash": "^4.17.15",
     "lodash.mergewith": "^4.6.2",
+    "minimist": "^1.2.5",
     "mixin-deep": "^2.0.1",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
+    "serialize-javascript": "^3.1.0",
     "set-value": "^3.0.2",
     "tar": "^6.0.2",
     "tslib": "^1.9.0",
