--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-yaml": "^3.14.0",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
+    "kind-of": "^6.0.3",
     "lodash": "^4.17.15",
     "lodash.mergewith": "^4.6.2",
     "minimist": "^1.2.5",
