--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "set-value": "^3.0.2",
     "tar": "^6.0.2",
     "tslib": "^1.9.0",
+    "websocket-extensions": "^0.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
