--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~7.2.0",
     "acorn": "^7.2.0",
     "angular-custom-modal": "^1.2.0",
+    "balanced-match": "^1.0.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "elliptic": "^6.5.3",
